# gd-snow-eng-mcp-server

./: cli.py  main.py  pyproject.toml  server.py  server_sse.py
config/: claude_desktop_config.json
scripts/: .env  check_pdi_info.py  check_pdi_status.py  install_claude_desktop.sh  setup.sh  setup_api_key.py  setup_auth.py  setup_oauth.py  test_connection.py
src/gd-snow-mcp/: server.py  server_ignore.py
src/gd-snow-mcp/tools/: _tools.py  connections.py  create_change_request_tools.py  get_kb_article.py  knowledge_base_tools.py  knowledge_tools.py  update_incident_tools.py
src/gd-snow-mcp/tools/gd_servicenow_api12/: PKG-INFO  README.md  pyproject.toml
src/gd-snow-mcp/tools/gd_servicenow_api12/scripts/: create_change_request.py  create_inc_with_ci.py  get_incidents.py  incident_state_change.py  update_incident.py
src/gd-snow-mcp/tools/scripts/: .env  create_change_request.py  get_incidents.py  get_table_data.py  knowledge_base.py
src/gd-snow-mcp/utils/: __init__.py
