[tool.poetry]
name = "gd-servicenow-api"
version = "0.2.0"
description = ""
authors = ["nsharavanan-godaddy <nsharavanan@godaddy.com>"]
readme = "README.md"
packages = [
    { include = "gd_servicenow_api" }
]

[tool.poetry.dependencies]
python = "^3.9"
boto3 = ">=1.26.7"
requests = ">=1.0.0"
urllib3 = ">=1.0.0"
twine = ">=4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"